# bounce

./: .clang-format  CMakeLists.txt  README.md  config.h.in
src/: CMakeLists.txt  ball.cxx  ball.hh  bounce.cxx  boundingbox.hh  color.hh  outlinerenderer.cxx  outlinerenderer.hh  pointgeom.cxx  pointgeom.hh  rectangle.hh  renderable.hh  renderer.cxx  renderer.hh  sdl.cxx  sdl.hh  solidrenderer.cxx  solidrenderer.hh  text.cxx  text.hh  wall.cxx  wall.hh  window.cxx  window.hh
test/: CMakeLists.txt  pointgeom.cxx
